# fast-web-admin-template

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
api/: Dockerfile  Makefile  api_init.sh  constants.py  database.py  main.py  pyproject.toml  seeder.py  settings.py  supervisord.conf  tracing.py
api/alembic/: env.py
api/alembic/versions/: 0265e561cb38_add_additional_user_id_field_to_audit.py  1770a12a6697_create_product_table.py  1f954d554b7e_deconstruct_location_field.py  3086a017b9f2_add_audit_table.py  38e2ed10907c_add_expenses_field_to_audit.py  5813cf8b1db8_add_image_field_to_product.py  61cad234414b_add_description_field_to_product.py  a179be423023_create_machine_model.py  a1fb34464cd5_add_additional_fields_to_audit.py  a6f6335fa44e_initial_migration.py  d032748641ab_create_branch_table.py
api/database/: __init__.py  engine.py  seeder.py
api/database/alembic/: env.py  script.py.mako
api/database/alembic/versions/: a6f6335fa44e_initial_migration.py
api/database/factory/: __init__.py  base.py
api/database/models/: __init__.py  application_setting.py  notification.py  role_access_control.py  template.py  user.py
api/factory/: __init__.py  audit.py  base.py  branch.py  machine.py  machine_product_link.py  product.py  user.py
api/middlewares/: tracing.py
api/models/: __init__.py  application_setting.py  audit.py  branch.py  machine.py  machine_product_link.py  notification.py  product.py  role_access_control.py  template.py  user.py
api/routes/: application_setting.py  audit.py  auth.py  branch.py  machine.py  notification.py  permission.py  product.py  role_access_control.py  template.py  user.py
api/routes/auth/: __init__.py  core.py  google.py  native.py  router.py  tfa.py
api/routes/utils/: crudutils.py  emailutil.py  fileutil.py  notificationutil.py  queryutil.py
api/scripts/: create_superuser.py
api/templates/emails/: email_verification.html.j2  reset_password.html.j2  tfa.html.j2
api/utils/: emailutil.py  notificationutil.py  uploadutil.py
api/worker/: cron.py  queue.py
api/worker/tasks/: email.py  notification.py
provision/: install-docker-gcp.sh
provision/mysql/: 01-add-test-db.sh
provision/otel/: otel-collector-config.yaml
provision/testing/: entrypoint.sh  supervisord-testing.conf
provision/worker/: entrypoint.sh  supervisord-worker.conf
testing/: conftest.py  fixtures.py  pytest.ini
testing/fixtures/: __init__.py  users.py
testing/tests/: test_auth.py  test_healthcheck.py
testing/tests/integration_tests/: test_login.py
testing/tests/unit_tests/: test_application_setting.py  test_auth.py  test_healthcheck.py  test_notification.py  test_role_access_control.py  test_template.py  test_user.py
tools/: manage.py  setup.py  workflow.py
tools/templates/: Caddyfile.j2  crud_template.py.j2  docker-compose.shared.yml.j2  docker-compose.yml.j2  env.j2  factory.py.j2  model.py.j2
web/: Dockerfile  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  prettier.config.js  tsconfig.app.json  vite.config.ts  web_init.sh
web/src/: App.tsx  constants.ts  index.tsx  theme.ts
web/src/components/: index.ts
web/src/components/buttons/: GoogleSignInButton.tsx
web/src/components/cards/: MachineCard.tsx  ProductCard.tsx  ProfileCard.tsx
web/src/components/cards/MachineCard/: ProductChip.tsx  RefillGasDialog.tsx
web/src/components/inputs/: BarangayInput.tsx  ConfirmPasswordInput.tsx  MunicipalityInput.tsx  ProvinceInput.tsx
web/src/hooks/: index.ts  useGetManyToManyReferenceList.ts
web/src/layout/: AppBar.tsx  Layout.tsx  Menu.tsx  index.ts
web/src/layout/default/: Appbar.tsx  Layout.tsx  Menu.tsx
web/src/layout/default/Appbar/: NotificationMenu.tsx  UserMenu.tsx
web/src/layout/horizontal/: AppBar.tsx  Layout.tsx  Sidebar.tsx
web/src/layout/horizontal/Appbar/: NotificationMenu.tsx  ResourceItem.tsx
web/src/pages/: AboutApp.tsx  Dashboard.tsx  Login.tsx  Profile.tsx  Register.tsx  Settings.tsx  index.ts
web/src/pages/Profile/: AccountSecurity.tsx  ResetPasswordDialog.tsx  TfaSetupDialog.tsx  UpdatePasswordDialog.tsx
web/src/pages/Settings/: ApplicationSettingsForm.tsx  RoleAccessSettingsForm.tsx  TemplateSettingsForm.tsx
web/src/pages/audits/: AuditList.tsx  AuditShow.tsx  index.ts
web/src/pages/auth/: ForgotPassword.tsx  Login.tsx  ResetPassword.tsx  TfaAuthenticatorSetup.tsx  TfaEmailSetup.tsx  TfaVerification.tsx
web/src/pages/branches/: BranchCreate.tsx  BranchEdit.tsx  BranchList.tsx  BranchShow.tsx  index.ts
web/src/pages/branches/BranchShow/: AddMachineDialog.tsx  AddProductDialog.tsx  BranchNameField.tsx  LocationField.tsx  MachineCard.tsx  MachineCards.tsx  ProductChip.tsx
web/src/pages/custom/: AboutApp.tsx
web/src/pages/dashboard/: Dashboard.tsx  PumpAttendantDashboard.tsx  SalesAdminDashboard.tsx
web/src/pages/dashboard/PumpAttendantDashboard/: AddSalesDialog.tsx  BranchInfoCard.tsx  ProductCarousel.tsx  SalesByProductCard.tsx  TotalDispensedCard.tsx  TotalExpensesCard.tsx  YearlySalesChart.tsx
web/src/pages/dashboard/cards/: SalesByBranchCard.tsx  SalesByProductCard.tsx  TotalSalesCard.tsx  WelcomeCard.tsx
web/src/pages/machines/: MachineCreate.tsx  MachineEdit.tsx  MachineList.tsx  MachineShow.tsx  index.ts
web/src/pages/products/: ProductCreate.tsx  ProductEdit.tsx  ProductList.tsx  ProductShow.tsx  index.ts
web/src/pages/users/: UserCreate.tsx  UserEdit.tsx  UserList.tsx  UserShow.tsx
web/src/providers/: authProvider.ts  constants.ts  dataProvider.ts
web/src/providers/auth/: google.ts  native.ts
web/src/types/: audit.ts  index.ts  machine.ts  product.ts
web/src/utils/: geodata.ts  index.ts  stringutil.ts
