[project]
name = "fast-web-admin-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "alembic>=1.16.4",
    "bcrypt>=4.3.0",
    "click>=8.2.1",
    "faker>=37.5.3",
    "fastapi-mail>=1.5.0",
    "fastapi[standard]>=0.116.1",
    "granian>=2.5.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "mysql-connector-python>=9.4.0",
    "nltk>=3.9.1",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "pyotp>=2.9.0",
    "python-jose[cryptography]>=3.5.0",
    "pytz>=2025.2",
    "redis>=6.3.0",
    "requests>=2.32.4",
    "sqlmodel>=0.0.24",
]

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.venv",
    "**/versions"
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".j2",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "**/versions/*.py",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",            # All pycodestyle errors (E4, E7, E9 are included)
    "F",            # Undefined names, unused imports, etc.
    "I",            # Import sorting
    "B",            # Common bugs and design problems
    "UP",           # Upgrade syntax for newer Python versions
    "W291",         # Trailing whitespace
    "W292",         # No newline at end of file
    "FAST001",
    "FAST002",
    "FAST003",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[dependency-groups]
dev = [
    "ruff>=0.12.8",
]
