[project]
name = "fast-web-admin-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "loguru>=0.7.3",
]

[tool.uv]
default-groups = []

[tool.pyright]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/.venv",
    "**/versions"
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".j2",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    "**/versions/*.py",
]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",            # All pycodestyle errors (E4, E7, E9 are included)
    "F",            # Undefined names, unused imports, etc.
    "I",            # Import sorting
    "B",            # Common bugs and design problems
    "UP",           # Upgrade syntax for newer Python versions
    "W291",         # Trailing whitespace
    "W292",         # No newline at end of file
    "FAST001",
    "FAST002",
    "FAST003",
]

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.ruff.format]
quote-style = "single"
indent-style = "space"

[dependency-groups]
api = [
    "aiomysql>=0.2.0",
    "alembic>=1.16.4",
    "authlib>=1.6.6",
    "bcrypt>=4.3.0",
    "click>=8.2.1",
    "faker>=37.5.3",
    "fastapi-mail>=1.5.0",
    "fastapi[standard]>=0.116.1",
    "granian>=2.5.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "mysql-connector-python>=9.4.0",
    "opentelemetry-api>=1.37.0",
    "opentelemetry-exporter-otlp>=1.37.0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.58b0",
    "opentelemetry-sdk>=1.37.0",
    "passlib>=1.7.4",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pymysql>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "pytz>=2025.2",
    "redis>=6.3.0",
    "requests>=2.32.4",
    "rq>=2.5.0",
    "sqlmodel>=0.0.24",
]
dev = [
    "click>=8.2.1",
    "nltk>=3.9.1",
    "playwright>=1.57.0",
    "pytest>=8.4.2",
    "pytest-playwright>=0.7.2",
    "ruff>=0.12.8",
    "textblob>=0.19.0",
]
worker = [
    "loguru>=0.7.3",
    "redis>=6.3.0",
    "rq>=2.5.0",
    "sqlmodel>=0.0.24",
]
