[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = ""
requires-python = ">=3.9,<4.0"
dependencies = [
    "alembic (>=1.14.0,<2.0.0)",
    "bcrypt (>=4.2.1,<5.0.0)",
    "fastapi[standard] (>=0.115.6,<0.116.0)",
    "fastapi-mail (>=1.4.2,<2.0.0)",
    "itsdangerous (>=2.2.0,<3.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "mysql-connector-python (>=9.1.0,<10.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pydantic (>=2.10.5,<3.0.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "pymysql (>=1.1.1,<2.0.0)",
    "pyotp (>=2.9.0,<3.0.0)",
    "python-jose[cryptography] (>=3.3.0,<4.0.0)",
    "pytz (>=2024.2,<2025.0)",
    "redis (>=5.2.1,<6.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "sqlalchemy (>=2.0.37,<3.0.0)",
    "sqlmodel (>=0.0.22,<0.0.23)",
    "faker (>=37.4.2,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
